# qarz-go

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: common.rs  contacts.rs  debts.rs  mod.rs  rooms.rs  start.rs
src/models/: block.rs  contact.rs  debt.rs  invite.rs  mod.rs  money.rs  room.rs  session.rs  user.rs
src/services/: clock.rs  installment.rs  mod.rs  notifier.rs  scheduler.rs  splitter.rs
src/storage/: file.rs  mod.rs  mongo.rs
src/telegram/: api.rs  mod.rs  polling.rs  types.rs  webhook.rs
